# HPR

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Data/: database.cpp  database.hpp  diskWriteHandlerMain.cpp  diskWriteHandlerMain.hpp
src/FontHeader/: InterFont.h
src/GUI/: GUIElements.cpp  GUIElements.hpp  imGuiStyling.cpp  imGuiStyling.hpp  mainGUI.cpp  mainGUI.hpp
src/Miscellaneous/: timeUtils.cpp  timeUtils.hpp
src/PlatformSpecific/IntegratedPlatformChecks/: activeWindowAndDataManager.cpp  activeWindowAndDataManager.hpp  manageDiskWrite.cpp  manageDiskWrite.hpp  validWindowChecks.cpp  validWindowChecks.hpp  validateWindow.cpp  validateWindow.hpp  windowDetection.cpp  windowDetection.hpp
